@@ -121,6 +121,10 @@ Bug Fixes
  * LUCENE-3495: Fix BlockJoinQuery to properly implement getBoost()/setBoost().
    (Robert Muir)
 
+ * LUCENE-3519: BlockJoinCollector always returned null when you tried
+   to retrieve top groups for any BlockJoinQuery after the first (Mark
+   Harwood, Mike McCandless)
+
 API Changes
  
  * LUCENE-3436: Add SuggestMode to the spellchecker, so you can specify the strategy
